--- a/src/styles/components/_Scanner.scss
+++ b/src/styles/components/_Scanner.scss
@@ -1,6 +1,26 @@
 .Scanner {
   &--container {
+    width: 100%;
+    height: 100%;
+  }
+
+  &--video {
+    position: fixed;
+    object-fit: cover;
+  }
+
+  &--switchCamera {
     position: absolute;
-    background-color: $primary;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #4c4c4c;
+    z-index: 100;
+    right: 20px;
+    top: 20px;
+    width: 56px;
+    height: 56px;
+    background-color: #fff;
+    border-radius: 28px;
   }
 }
