Added the possibility to edit or delete a card

--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -1,5 +1,6 @@
 html, body, #root, #root>div {
    background-color: $bg;
+   color: $text;
    height: 100%;
    font-family: 'Raleway', sans-serif;
 }
