--- a/src/styles/components/_ScanButton.scss
+++ b/src/styles/components/_ScanButton.scss
@@ -9,8 +9,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $primary;
-    box-shadow: 0 0 20px $primary;
+    background-color: $primary-color;
+    box-shadow: 0 0 20px $primary-color;
   }
 
   &--icon {
