--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,7 +1,9 @@
-$bg: #F9F9FB;
-$bg-card: #F9F9FB;
-$bg-text: #B9BAC2;
-$primary: #FAC650;
+$bg: #fff;
+$primary-color: #FAC650;
+$secondary-color: #F9F9FB;
 $text: #504D4D;
+$text-foncy: #B9BAC2;
 
-$border-radius: 30px;
+
+$border-radius: 10px;
+$border-radius-lg: 30px;
