--- a/src/styles/components/_CardList.scss
+++ b/src/styles/components/_CardList.scss
@@ -1,14 +1,23 @@
-.CardList {
-  &--card-body {
-    display: block;
+.cardList {
+  &__container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  &__card-body {
+    height: 120px;
     border-radius: $border-radius;
-    padding: 1.2rem;
-    //margin: .3rem;
     border: 3px solid $secondary-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 15px;
+    padding-right: 15px;
 
     img {
-      width: 100%;
-      height: 30px;
+      max-width: 100%;
+      height: 40px;
     }
 
     &:hover {
@@ -54,6 +63,33 @@
       font-weight: bold;
       margin-bottom: 0;
       font-size: 14px;
+    }
+  }
+}
+
+.img {
+  height: 70px;
+}
+
+.beta {
+  border: 3px solid $secondary-color;
+  border-radius: $border-radius;
+
+  &__body {
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  &__footer {
+    border-top: 3px solid $secondary-color;
+    padding: 1.5rem;
+    text-align: center;
+
+    h1 {
+      font-size: 2em;
+      margin-bottom: 0;
+      font-weight: bold;
     }
   }
 }
