--- a/src/styles/components/_Shop.scss
+++ b/src/styles/components/_Shop.scss
@@ -1,16 +1,30 @@
-.Shop {
-  &--container {
-    padding: 2rem;
+.shop {
+  &__container {
+    padding: 1rem;
     display: flex;
+    align-items: center;
+    border: 3px solid $secondary-color;
+    border-radius: 10px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+    @media all and (min-width: 768px){
+      padding: 2rem;
+    }
+
     &:hover {
       background-color: #fff;
       box-shadow: 0 0 25px rgba(0, 0, 0, 0.12);
-      border-radius: 10px;
+      border: 3px solid #fff;
     }
   }
-  &--logo {
-    width: 20%;
-    margin-left: 2rem;
-    margin-right: 2rem;
+
+  &__logo {
+    max-width: 100%;
+    height: 50px;
+  }
+
+  &__name {
+    font-size: 1.5em;
   }
 }
