add ESLint + Prettier + Airbnb Style Guide and project reorganisation

--- a/src/styles/components/_AddShop.scss
+++ b/src/styles/components/_AddShop.scss
@@ -19,12 +19,8 @@
     }
   }
 
-  &__logo {
-    max-width: 100%;
-    height: 50px;
-  }
-
   &__name {
     font-size: 1.5em;
+    margin-bottom: 0;
   }
 }
