--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -1,3 +1,4 @@
-@import 'Scanner';
-@import 'Shop';
-@import 'CardList';
+@import './AddShop';
+@import './CardInfo';
+@import './CardList';
+@import './Scanner';
