--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -1,4 +1,7 @@
-html, body, #root, #root > div {
+html,
+body,
+#root,
+#root > div {
   color: $text;
   height: 100%;
   font-family: 'Raleway', sans-serif;
@@ -34,10 +37,30 @@ a {
       display: inline-flex;
       padding: 1rem;
     }
+
+    &.text {
+      display: inline-flex;
+      padding: 0.8rem 2rem;
+      font-weight: bold;
+    }
   }
 
   &__icon {
     display: inherit;
     color: $text;
   }
+}
+
+.logo {
+  max-width: 100%;
+  max-height: 40px;
+
+  @media all and (min-width: 720px) {
+    max-height: 50px;
+    height: 50px;
+  }
+}
+
+.bg-light-grey {
+  background-color: $secondary-color;
 }
