--- a/src/styles/components/_CardList.scss
+++ b/src/styles/components/_CardList.scss
@@ -1,4 +1,4 @@
-.cardList {
+.card-item {
   &__container {
     display: flex;
     flex-direction: row;
@@ -12,17 +12,27 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+
+    @media all and (min-width: 720px) {
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
+    }
 
     img {
       max-width: 100%;
-      height: 40px;
+      max-height: 40px;
+
+      @media all and (min-width: 720px) {
+        max-height: 50px;
+        height: 50px;
+      }
     }
 
     &:hover {
       box-shadow: 0 0 25px rgba(0, 0, 0, 0.12);
-      border: none;
+      border: 3px solid #fff;
     }
   }
 }
@@ -38,7 +48,7 @@
   }
 }
 
-.alert1 {
+.alert-error {
   border: 3px solid $secondary-color;
   border-radius: $border-radius;
   padding: 1rem;
@@ -46,7 +56,7 @@
 
   &__prepend {
     border-radius: $border-radius-lg;
-    background-color: #FEF4DC;
+    background-color: #fef4dc;
     padding: 1rem;
     margin-right: 1rem;
     height: 50%;
@@ -63,33 +73,6 @@
       font-weight: bold;
       margin-bottom: 0;
       font-size: 14px;
-    }
-  }
-}
-
-.img {
-  height: 70px;
-}
-
-.beta {
-  border: 3px solid $secondary-color;
-  border-radius: $border-radius;
-
-  &__body {
-    padding: 2rem;
-    display: flex;
-    justify-content: center;
-  }
-
-  &__footer {
-    border-top: 3px solid $secondary-color;
-    padding: 1.5rem;
-    text-align: center;
-
-    h1 {
-      font-size: 1.7em;
-      margin-bottom: 0;
-      font-weight: bold;
     }
   }
 }
