--- a/src/styles/components/_Scanner.scss
+++ b/src/styles/components/_Scanner.scss
@@ -1,7 +1,3 @@
-.bg {
-  background-color: $secondary-color;
-}
-
 .scanner {
   display: flex;
   justify-content: center;
@@ -31,7 +27,7 @@
     position: absolute;
     top: 1.5rem;
     right: 1.5rem;
-    padding: .5rem;
+    padding: 0.5rem;
     z-index: 10;
     border: 0;
     background-color: transparent;
@@ -65,8 +61,8 @@
     color: #4c4c4c;
     width: 56px;
     height: 56px;
-    background-color: #FAC650;
+    background-color: #fac650;
     border-radius: 30px;
-    box-shadow: 0 0 20px #FAC650;
+    box-shadow: 0 0 20px #fac650;
   }
 }
